# ebuild-crates-check

./: .gitignore  Cargo.toml
.github/: dependabot.yml
src/: gitrepo.rs  main.rs  overlays.rs  re.rs
src/tests/: example.ebuild  repos-example.xml
